<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sky Cam</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_about">About</string>
    <string name="action_exposure">Exposure</string>
<<<<<<< HEAD
    <string name="action_guide">Guide</string>
=======
>>>>>>> b6938a79a632e370ebfe64c9484f88882a2c5b56
    <string name="iso_mode">ISO Mode</string>
    <string name="exposure_compensation">Exposure Compensation</string>
    <string name="prefs_web_page">Make a map..</string>
    <string name="prefs_learnweb_page">Attach a phone to balloon..</string>
<<<<<<< HEAD
    <string name="prefs_opensourceweb_page">Download source code..</string>
    <string name="links_tab_make_a_map">Stitch your images, make a map..</string>
    <string name="links_tab_mapping_regulations">Balloon mapping regulations..</string>
    <string name="links_tab_share_your_experience">Share your experience..</string>
    <string name="links_tab_share_your_expertise_cartography_collection">Share in Cartography Collection..</string>
    <string name="title_activity_how_to">Sky Cam Guide</string>
    <string name="tab_1_title">PhotoAcquisition Mission</string>
    <string name="tab_2_title">Processing Aerial Photos</string>
    <string name="tab_3_title">App Settings in Detail</string>

=======
    <string name="prefs_opensourceweb_page">Download source code</string>
>>>>>>> b6938a79a632e370ebfe64c9484f88882a2c5b56
</resources>
